# hspaans.github.io

./: .dockerfilelintrc  .gitignore  .pymarkdown.yml  .yamllint.yml  CNAME  Gemfile  README.md  _config.yml  feed.md  index.md  pylock.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  settings.yml
.github/annotations/: pymarkdown-problem-matcher.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  linter.yml  pages-deploy.yml
_layouts/: home.html
docs/: 404.rst  about.rst  blog.rst  conf.py  index.rst  posts.rst  projects.rst  robots.txt
docs/_static/: alabaster.css  furo.css
docs/_templates/: layout.html
docs/_templates/sidebar/: brand.html
docs/blog/: index.rst
docs/blog/2025/: basic-linting-in-a-github-workflow.rst  create-github-issue-on-schedule.rst  custom-github-issue-templates.rst  deleting-github-notifications.rst  nand-nor-xor-operators-in-python.rst  one-billion-nested-loop-iterations.rst  reviewing-dependencies.rst  start-using-github-dependabot.rst  test.rst  time-to-contain-perl.rst  upload-to-github-wiki.rst  why-start-blogging.rst
docs/blog/2026/: experimenting-with-grokipedia.rst  start-creating-skills-for-copilot.rst
docs/posts/: index.rst
