[project]
name = "hspaans.github.io"
version = "0.1.0"
description = "A Python project for demonstrating best practices in project configuration and tooling."
authors = [
   { name = "Hans Spaans", email = "hspaans@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
]

[dependency-groups]
dev = [
    "tox>=4.27.0,<5.0.0",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "type"},
]
docs = [
    "ablog",
    "myst_parser",
    "sphinx~=8.2.0",
    "sphinx-autobuild",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-googleanalytics",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinx_sitemap",
    "furo",
]
lint = [
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-isort",
    "yamllint",
    "codespell",
]
type = [
    "mypy>=1.10.0,<2.0.0",
]

[tool.tox]
requires = ["tox>=4.27.0,<5.0.0"]
env_list = ["docs"]

description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.docs]
description = "run type check on code base"
dependency_groups = ["docs"]
commands = [
   [
     "sphinx-build",
     "-d",
     "{env_tmp_dir}{/}docs_tree",
     "docs",
     "{env:READTHEDOCS_OUTPUT:{work_dir}{/}docs_out}/html",
     "--color",
     "-b",
     "html",
     { replace = "posargs", default = [], extend = true },
     "-W",
   ],
]

[tool.tox.env.lint]
description = "run linting on code base"
dependency_groups = ["lint"]
commands = [
    ["flake8", "src"],
    ["flake8", "tests"]
]

[tool.tox.env.typecheck]
description = "run type check on code base"
dependency_groups = ["type"]
commands = [
    ["mypy", "src{/}tox"],
    ["mypy", "tests"]
]